new attributes added

--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -15,6 +15,7 @@
 	<title>Search</title>
 </head>
 <body>
+<div class="menu"></div>
 <!-- Layout Principal -->
 <div class="layoutSearch">
 	<!-- Layout para Resultados -->
@@ -64,17 +65,504 @@
 
 			</div>
 		</div>
+		<div class="Item">
+			<div class="Item-picture">
+				<figure class="Item-picture-image"
+				style="background-image:url(../../assets/images/profile.png)"
+				></figure>
+			</div>
+			<div class="Item-share">
+				<a href="#">
+					<span class="icon-share2"></span>
+				</a>
+			</div>
+			<div class="Item-info">
+				<h2 class="Item-info-name">
+					Pollos Kikys
+				</h2>
+				<h5 class="Item-info-category">
+					Restaurant - Santa Cruz
+				</h5>
+				<p class="Item-info-description">
+					Pollos a la leña siempre con doble arroz,
+					Deliciosos y Sensuales llopos a la leña siempre con doble arroz!
+				</p>
+				<adress class="Item-info-address">
+					<strong>Direccion:</strong>
+					Calle Pinilla Nro.2588, Edif Arcadia P.11 E(Socopachi)
+				</adress>
+
+				<div class="Item-info-contact">
+					<a href="tel:79413052" class="Item-info-contact-cellphone">
+						<span class="icon-phone"></span>
+						<i>79413052</i>
+					</a>
+					<a href="#" class="Item-info-contact-gps">
+						<span class="icon-location2"></span>
+						<i>Ver Mapa</i>
+					</a>
+					<a href="#" class="Item-info-contact-more">
+						<span class="icon-arrow-right2"></span>
+						<i>Ver Mas...</i>
+					</a>
+				</div>
+
+			</div>
+		</div>
+		<div class="Item">
+			<div class="Item-picture">
+				<figure class="Item-picture-image"
+				style="background-image:url(../../assets/images/profile.png)"
+				></figure>
+			</div>
+			<div class="Item-share">
+				<a href="#">
+					<span class="icon-share2"></span>
+				</a>
+			</div>
+			<div class="Item-info">
+				<h2 class="Item-info-name">
+					Pollos Kikys
+				</h2>
+				<h5 class="Item-info-category">
+					Restaurant - Santa Cruz
+				</h5>
+				<p class="Item-info-description">
+					Pollos a la leña siempre con doble arroz,
+					Deliciosos y Sensuales llopos a la leña siempre con doble arroz!
+				</p>
+				<adress class="Item-info-address">
+					<strong>Direccion:</strong>
+					Calle Pinilla Nro.2588, Edif Arcadia P.11 E(Socopachi)
+				</adress>
+
+				<div class="Item-info-contact">
+					<a href="tel:79413052" class="Item-info-contact-cellphone">
+						<span class="icon-phone"></span>
+						<i>79413052</i>
+					</a>
+					<a href="#" class="Item-info-contact-gps">
+						<span class="icon-location2"></span>
+						<i>Ver Mapa</i>
+					</a>
+					<a href="#" class="Item-info-contact-more">
+						<span class="icon-arrow-right2"></span>
+						<i>Ver Mas...</i>
+					</a>
+				</div>
+
+			</div>
+		</div>
+		<div class="Item">
+			<div class="Item-picture">
+				<figure class="Item-picture-image"
+				style="background-image:url(../../assets/images/profile.png)"
+				></figure>
+			</div>
+			<div class="Item-share">
+				<a href="#">
+					<span class="icon-share2"></span>
+				</a>
+			</div>
+			<div class="Item-info">
+				<h2 class="Item-info-name">
+					Pollos Kikys
+				</h2>
+				<h5 class="Item-info-category">
+					Restaurant - Santa Cruz
+				</h5>
+				<p class="Item-info-description">
+					Pollos a la leña siempre con doble arroz,
+					Deliciosos y Sensuales llopos a la leña siempre con doble arroz!
+				</p>
+				<adress class="Item-info-address">
+					<strong>Direccion:</strong>
+					Calle Pinilla Nro.2588, Edif Arcadia P.11 E(Socopachi)
+				</adress>
+
+				<div class="Item-info-contact">
+					<a href="tel:79413052" class="Item-info-contact-cellphone">
+						<span class="icon-phone"></span>
+						<i>79413052</i>
+					</a>
+					<a href="#" class="Item-info-contact-gps">
+						<span class="icon-location2"></span>
+						<i>Ver Mapa</i>
+					</a>
+					<a href="#" class="Item-info-contact-more">
+						<span class="icon-arrow-right2"></span>
+						<i>Ver Mas...</i>
+					</a>
+				</div>
+
+			</div>
+		</div>
+		<div class="Item">
+			<div class="Item-picture">
+				<figure class="Item-picture-image"
+				style="background-image:url(../../assets/images/profile.png)"
+				></figure>
+			</div>
+			<div class="Item-share">
+				<a href="#">
+					<span class="icon-share2"></span>
+				</a>
+			</div>
+			<div class="Item-info">
+				<h2 class="Item-info-name">
+					Pollos Kikys
+				</h2>
+				<h5 class="Item-info-category">
+					Restaurant - Santa Cruz
+				</h5>
+				<p class="Item-info-description">
+					Pollos a la leña siempre con doble arroz,
+					Deliciosos y Sensuales llopos a la leña siempre con doble arroz!
+				</p>
+				<adress class="Item-info-address">
+					<strong>Direccion:</strong>
+					Calle Pinilla Nro.2588, Edif Arcadia P.11 E(Socopachi)
+				</adress>
+
+				<div class="Item-info-contact">
+					<a href="tel:79413052" class="Item-info-contact-cellphone">
+						<span class="icon-phone"></span>
+						<i>79413052</i>
+					</a>
+					<a href="#" class="Item-info-contact-gps">
+						<span class="icon-location2"></span>
+						<i>Ver Mapa</i>
+					</a>
+					<a href="#" class="Item-info-contact-more">
+						<span class="icon-arrow-right2"></span>
+						<i>Ver Mas...</i>
+					</a>
+				</div>
+
+			</div>
+		</div>
+		<div class="Item">
+			<div class="Item-picture">
+				<figure class="Item-picture-image"
+				style="background-image:url(../../assets/images/profile.png)"
+				></figure>
+			</div>
+			<div class="Item-share">
+				<a href="#">
+					<span class="icon-share2"></span>
+				</a>
+			</div>
+			<div class="Item-info">
+				<h2 class="Item-info-name">
+					Pollos Kikys
+				</h2>
+				<h5 class="Item-info-category">
+					Restaurant - Santa Cruz
+				</h5>
+				<p class="Item-info-description">
+					Pollos a la leña siempre con doble arroz,
+					Deliciosos y Sensuales llopos a la leña siempre con doble arroz!
+				</p>
+				<adress class="Item-info-address">
+					<strong>Direccion:</strong>
+					Calle Pinilla Nro.2588, Edif Arcadia P.11 E(Socopachi)
+				</adress>
+
+				<div class="Item-info-contact">
+					<a href="tel:79413052" class="Item-info-contact-cellphone">
+						<span class="icon-phone"></span>
+						<i>79413052</i>
+					</a>
+					<a href="#" class="Item-info-contact-gps">
+						<span class="icon-location2"></span>
+						<i>Ver Mapa</i>
+					</a>
+					<a href="#" class="Item-info-contact-more">
+						<span class="icon-arrow-right2"></span>
+						<i>Ver Mas...</i>
+					</a>
+				</div>
+
+			</div>
+		</div>
+		<div class="Item">
+			<div class="Item-picture">
+				<figure class="Item-picture-image"
+				style="background-image:url(../../assets/images/profile.png)"
+				></figure>
+			</div>
+			<div class="Item-share">
+				<a href="#">
+					<span class="icon-share2"></span>
+				</a>
+			</div>
+			<div class="Item-info">
+				<h2 class="Item-info-name">
+					Pollos Kikys
+				</h2>
+				<h5 class="Item-info-category">
+					Restaurant - Santa Cruz
+				</h5>
+				<p class="Item-info-description">
+					Pollos a la leña siempre con doble arroz,
+					Deliciosos y Sensuales llopos a la leña siempre con doble arroz!
+				</p>
+				<adress class="Item-info-address">
+					<strong>Direccion:</strong>
+					Calle Pinilla Nro.2588, Edif Arcadia P.11 E(Socopachi)
+				</adress>
+
+				<div class="Item-info-contact">
+					<a href="tel:79413052" class="Item-info-contact-cellphone">
+						<span class="icon-phone"></span>
+						<i>79413052</i>
+					</a>
+					<a href="#" class="Item-info-contact-gps">
+						<span class="icon-location2"></span>
+						<i>Ver Mapa</i>
+					</a>
+					<a href="#" class="Item-info-contact-more">
+						<span class="icon-arrow-right2"></span>
+						<i>Ver Mas...</i>
+					</a>
+				</div>
+
+			</div>
+		</div>
+		<div class="Item">
+			<div class="Item-picture">
+				<figure class="Item-picture-image"
+				style="background-image:url(../../assets/images/profile.png)"
+				></figure>
+			</div>
+			<div class="Item-share">
+				<a href="#">
+					<span class="icon-share2"></span>
+				</a>
+			</div>
+			<div class="Item-info">
+				<h2 class="Item-info-name">
+					Pollos Kikys
+				</h2>
+				<h5 class="Item-info-category">
+					Restaurant - Santa Cruz
+				</h5>
+				<p class="Item-info-description">
+					Pollos a la leña siempre con doble arroz,
+					Deliciosos y Sensuales llopos a la leña siempre con doble arroz!
+				</p>
+				<adress class="Item-info-address">
+					<strong>Direccion:</strong>
+					Calle Pinilla Nro.2588, Edif Arcadia P.11 E(Socopachi)
+				</adress>
+
+				<div class="Item-info-contact">
+					<a href="tel:79413052" class="Item-info-contact-cellphone">
+						<span class="icon-phone"></span>
+						<i>79413052</i>
+					</a>
+					<a href="#" class="Item-info-contact-gps">
+						<span class="icon-location2"></span>
+						<i>Ver Mapa</i>
+					</a>
+					<a href="#" class="Item-info-contact-more">
+						<span class="icon-arrow-right2"></span>
+						<i>Ver Mas...</i>
+					</a>
+				</div>
+
+			</div>
+		</div>
+		<div class="Item">
+			<div class="Item-picture">
+				<figure class="Item-picture-image"
+				style="background-image:url(../../assets/images/profile.png)"
+				></figure>
+			</div>
+			<div class="Item-share">
+				<a href="#">
+					<span class="icon-share2"></span>
+				</a>
+			</div>
+			<div class="Item-info">
+				<h2 class="Item-info-name">
+					Pollos Kikys
+				</h2>
+				<h5 class="Item-info-category">
+					Restaurant - Santa Cruz
+				</h5>
+				<p class="Item-info-description">
+					Pollos a la leña siempre con doble arroz,
+					Deliciosos y Sensuales llopos a la leña siempre con doble arroz!
+				</p>
+				<adress class="Item-info-address">
+					<strong>Direccion:</strong>
+					Calle Pinilla Nro.2588, Edif Arcadia P.11 E(Socopachi)
+				</adress>
+
+				<div class="Item-info-contact">
+					<a href="tel:79413052" class="Item-info-contact-cellphone">
+						<span class="icon-phone"></span>
+						<i>79413052</i>
+					</a>
+					<a href="#" class="Item-info-contact-gps">
+						<span class="icon-location2"></span>
+						<i>Ver Mapa</i>
+					</a>
+					<a href="#" class="Item-info-contact-more">
+						<span class="icon-arrow-right2"></span>
+						<i>Ver Mas...</i>
+					</a>
+				</div>
+
+			</div>
+		</div>
+		<div class="Item">
+			<div class="Item-picture">
+				<figure class="Item-picture-image"
+				style="background-image:url(../../assets/images/profile.png)"
+				></figure>
+			</div>
+			<div class="Item-share">
+				<a href="#">
+					<span class="icon-share2"></span>
+				</a>
+			</div>
+			<div class="Item-info">
+				<h2 class="Item-info-name">
+					Pollos Kikys
+				</h2>
+				<h5 class="Item-info-category">
+					Restaurant - Santa Cruz
+				</h5>
+				<p class="Item-info-description">
+					Pollos a la leña siempre con doble arroz,
+					Deliciosos y Sensuales llopos a la leña siempre con doble arroz!
+				</p>
+				<adress class="Item-info-address">
+					<strong>Direccion:</strong>
+					Calle Pinilla Nro.2588, Edif Arcadia P.11 E(Socopachi)
+				</adress>
+
+				<div class="Item-info-contact">
+					<a href="tel:79413052" class="Item-info-contact-cellphone">
+						<span class="icon-phone"></span>
+						<i>79413052</i>
+					</a>
+					<a href="#" class="Item-info-contact-gps">
+						<span class="icon-location2"></span>
+						<i>Ver Mapa</i>
+					</a>
+					<a href="#" class="Item-info-contact-more">
+						<span class="icon-arrow-right2"></span>
+						<i>Ver Mas...</i>
+					</a>
+				</div>
+
+			</div>
+		</div>
+		<div class="Item">
+			<div class="Item-picture">
+				<figure class="Item-picture-image"
+				style="background-image:url(../../assets/images/profile.png)"
+				></figure>
+			</div>
+			<div class="Item-share">
+				<a href="#">
+					<span class="icon-share2"></span>
+				</a>
+			</div>
+			<div class="Item-info">
+				<h2 class="Item-info-name">
+					Pollos Kikys
+				</h2>
+				<h5 class="Item-info-category">
+					Restaurant - Santa Cruz
+				</h5>
+				<p class="Item-info-description">
+					Pollos a la leña siempre con doble arroz,
+					Deliciosos y Sensuales llopos a la leña siempre con doble arroz!
+				</p>
+				<adress class="Item-info-address">
+					<strong>Direccion:</strong>
+					Calle Pinilla Nro.2588, Edif Arcadia P.11 E(Socopachi)
+				</adress>
+
+				<div class="Item-info-contact">
+					<a href="tel:79413052" class="Item-info-contact-cellphone">
+						<span class="icon-phone"></span>
+						<i>79413052</i>
+					</a>
+					<a href="#" class="Item-info-contact-gps">
+						<span class="icon-location2"></span>
+						<i>Ver Mapa</i>
+					</a>
+					<a href="#" class="Item-info-contact-more">
+						<span class="icon-arrow-right2"></span>
+						<i>Ver Mas...</i>
+					</a>
+				</div>
+
+			</div>
+		</div>
+		<div class="Item">
+			<div class="Item-picture">
+				<figure class="Item-picture-image"
+				style="background-image:url(../../assets/images/profile.png)"
+				></figure>
+			</div>
+			<div class="Item-share">
+				<a href="#">
+					<span class="icon-share2"></span>
+				</a>
+			</div>
+			<div class="Item-info">
+				<h2 class="Item-info-name">
+					Pollos Kikys
+				</h2>
+				<h5 class="Item-info-category">
+					Restaurant - Santa Cruz
+				</h5>
+				<p class="Item-info-description">
+					Pollos a la leña siempre con doble arroz,
+					Deliciosos y Sensuales llopos a la leña siempre con doble arroz!
+				</p>
+				<adress class="Item-info-address">
+					<strong>Direccion:</strong>
+					Calle Pinilla Nro.2588, Edif Arcadia P.11 E(Socopachi)
+				</adress>
+
+				<div class="Item-info-contact">
+					<a href="tel:79413052" class="Item-info-contact-cellphone">
+						<span class="icon-phone"></span>
+						<i>79413052</i>
+					</a>
+					<a href="#" class="Item-info-contact-gps">
+						<span class="icon-location2"></span>
+						<i>Ver Mapa</i>
+					</a>
+					<a href="#" class="Item-info-contact-more">
+						<span class="icon-arrow-right2"></span>
+						<i>Ver Mas...</i>
+					</a>
+				</div>
+
+			</div>
+		</div>
 	</div>
 	<!-- Layout de filtros -->
 	<div class="layoutFilter">
 		<div class="Filter">
 			<div class="Filter-nav">
-				<div class="Filter-nav-image"></div>
-				<div class="Filter-nav-title"></div>
+				<img class="Filter-nav-image" src="../../assets/images/logoo-inverse.png" alt="">
+				<h3 class="Filter-nav-title">
+					Filtros
+				</h3>
 			</div>
 
 		</div>
 	</div>
 </div>
+<script src="./search.js"></script>
 </body>
 </html>
