--- a/templates/search/search.css
+++ b/templates/search/search.css
@@ -2,6 +2,11 @@
 body{
   background: #e9eaeb;
 }
+.menu{
+  width: 100%;
+  height: 50px;
+  background: red;
+}
 /********************************************************
                         LAYOUTS
 ********************************************************/
@@ -16,7 +21,7 @@ body{
 }
 .layoutItem,
 .layoutFilter{
-  vertical-align: middle;
+  vertical-align: top;
   word-spacing: normal;
   letter-spacing: normal;
   white-space: normal;
@@ -42,8 +47,27 @@ body{
 .Filter{
   width: 350px;
   height: 150px;
+  top: 50px;
+  border-radius: 5px 5px 0px 0px;
+  overflow: hidden;
   position: fixed;
+  border: 1px solid;
+  border-color: #e5e6e9 #dfe0e4 #d0d1d5;
+  background: #fff;
+}
+.Filter-nav{
   background: #2d2d2d;
+  width: 100%;
+  height: 75px;
+  text-align: center;
+  vertical-align: middle;
+}
+.Filter-nav-image{
+  width: 70px;
+}
+.Filter-nav-title{
+  color: #e9eaeb;
+  display: inline-block;
 }
 
 /********************************************************
@@ -61,7 +85,7 @@ body{
   border-radius: 5px;
   border: 1px solid;
   border-color: #e5e6e9 #dfe0e4 #d0d1d5;
-  margin: 0 auto;
+  margin: 5px auto;
 }
 .Item h2, .Item h5{
   margin: 0;
