--- a/templates/search/search.css
+++ b/templates/search/search.css
@@ -45,10 +45,10 @@ body{
 ********************************************************/
 
 .Filter{
-  width: 350px;
+  width: 300px;
   height: 150px;
   top: 50px;
-  border-radius: 5px 5px 0px 0px;
+  border-radius: 7px;
   overflow: hidden;
   position: fixed;
   border: 1px solid;
