Working Client Profile

--- a/templates/profile/profile.html
+++ b/templates/profile/profile.html
@@ -18,7 +18,7 @@
   <div class="row reset-margin">
     <div class="col-md-12 reset-padding">
       <div class="row reset-margin">
-        <div class="col-md-10 col-md-offset-1 reset-margin1">
+        <div class="col-md-10 col-md-offset-1 reset-margin1 reset-padding">
           <div class="container-profile">
             <div class="container-information">
               <div class="Portada text-center">
