--- a/templates/profile/profile.html
+++ b/templates/profile/profile.html
@@ -116,10 +116,12 @@
             <div class="container-menu">
               <div class="container-menu-invitation">
                 <div class="container-midle">
-                  <div class="container-menu-logo"></div>
+                  <div class="container-menu-logo text-right">
+                    <img class="Filter-nav-image" src="../../assets/images/logoo-inverse.png" alt="" width="70px">
+                  </div>
                 </div>
                 <div class="container-midle">
-                  <span class="font-general">Registrarse</span>
+                  <span class="font-general">REGISTRARSE</span>
                 </div>
               </div>
               <div class="container-menu-search">
