--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -559,6 +559,10 @@
 					Filtros
 				</h3>
 			</div>
+			<div class="Filter-category">
+				<img class="Filter-category-image" src="../../assets/images/gooCategorias.jpg" alt="">
+				<h5>Cambiar Categoria</h5>
+			</div>
 
 		</div>
 	</div>
