--- a/templates/search/search.css
+++ b/templates/search/search.css
@@ -5,7 +5,7 @@ body{
 .menu{
   width: 100%;
   height: 50px;
-  background: red;
+  background: #d4d4d4;
 }
 /********************************************************
                         LAYOUTS
@@ -37,7 +37,7 @@ body{
   display: inline-block;
   position: relative;
   width: 360px;
-  height: 150px;
+  height: 50px;
   background: green;
 }
 /********************************************************
@@ -46,7 +46,7 @@ body{
 
 .Filter{
   width: 300px;
-  height: 150px;
+  height: 500px;
   top: 50px;
   border-radius: 7px;
   overflow: hidden;
@@ -67,6 +67,7 @@ body{
 }
 .Filter-nav-title{
   color: #e9eaeb;
+  font-weight: 200;
   display: inline-block;
 }
 
@@ -111,6 +112,9 @@ body{
   background-color:#e9e9e9;
   background-position: center;
   background-size: cover;
+}
+.Item-picture-genial{
+  
 }
 .Item-share a{
   text-decoration: none;
