--- a/templates/profile/profile.html
+++ b/templates/profile/profile.html
@@ -94,8 +94,9 @@
                   <span class="font-block ion-social-googleplus icon-social google-plus"></span>
                   <span class="font-block ion-play icon-social youtube"></span>
                 </div>
-                <div class="container-small bg-ligth-gray padding-general text-center">
-                  <span class="font-general font-big font-block" style="margin-top:6px;"> <i class="ion-android-share-alt"></i> Compartir</span>
+                <div class="container-small bg-ligth-gray text-center" style="padding:10px 18px;">
+                  <i class="ion-android-share-alt" style="font-size:35px;margin-right:12px;display:inline-block;"></i>
+                  <span class="font-general font-big font-block" style="margin-top:10px;display:inline-block;vertical-align: top;">  Compartir</span>
                 </div>
               </div>
               <div class="container-normal padding-general bg-gray">
@@ -133,13 +134,16 @@
               </div>
               <div class="container-opciones">
                 <div class="container-normal">
-                  <div class="opciones bg-ligth-gray">
+                  <div class="opt bg-ligth-gray">
                     <span class="font-general">PERFIL</span>
+                    <div class="option1"></div>
                   </div>
                 </div>
                 <div class="container-normal">
                   <div class="opciones bg-ligth-gray">
                     <span class="font-general">COMENTAR</span>
+                    <div class="option1" style="background-position: 50px;"></div>
+
                   </div>
                 </div>
                 <div class="container-normal padding-general">
@@ -152,16 +156,20 @@
                 <div class="container-normal">
                   <div class="opciones bg-ligth-gray">
                     <span class="font-general">MIS EVENTOS</span>
+                    <div class="option1" style="background-position: 150px;" ></div>
                   </div>
                 </div>
                 <div class="container-normal">
                   <div class="opciones bg-ligth-gray">
                     <span class="font-general">MIS EMPLEOS</span>
+                    <div class="option1" style="background-position: 100px;"></div>
                   </div>
                 </div>
                 <div class="container-normal">
                   <div class="opciones bg-ligth-gray">
                     <span class="font-general">MIS OFERTAS</span>
+                    <div class="option1" style="background-position: 0px;"></div>
+
                   </div>
                 </div>
               </div>
