--- a/templates/profile/profile.css
+++ b/templates/profile/profile.css
@@ -339,12 +339,12 @@ body {
 @media (min-width:960px) {
   .opt {
     background: #292929 !important;
-    height: 33px;
+    height: 27px;
     width: 97%;
-    /* border-radius: 20px; */
     margin: 0 auto;
     margin-left: -7px;
-    padding: 7px;
+    margin-top: 0px;
+    padding: 4px;
     padding-left: 80px;
   }
   .opt span {
@@ -355,12 +355,12 @@ body {
   }
   .opt:before {
     content: '';
-    width: 23px;
-    height: 23px;
+    width: 19.2px;
+    height: 19.5px;
     background: #292929;
     position: absolute;
-    left: -9px;
-    margin-top: -2px;
+    left: -7px;
+    margin-top: 0px;
     transform: rotate(45deg);
   }
   .option1 {
@@ -414,6 +414,7 @@ body {
     margin: 0 auto;
     height: 26px;
     border-bottom: 1px solid #8a8a8c40;
+    margin-bottom: 10px;
   }
   .container-menu-invitation {
     height: 75px;
@@ -454,12 +455,12 @@ body {
     padding: 15px 5px;
   }
   .opciones {
-    height: 33px;
+    height: 27px;
     width: 95%;
     /* background: rebeccapurple; */
     border-radius: 20px;
     margin: 0 auto;
-    padding: 7px;
+    padding: 5px;
     padding-left: 65px;
     color: white;
   }
