--- a/assets/css/icomoon.css
+++ b/assets/css/icomoon.css
@@ -25,10 +25,10 @@
 }
 
 .icon-phone:before {
-  content: "\e942";
+  content: "\e902";
 }
 .icon-location2:before {
-  content: "\e948";
+  content: "\e";
 }
 .icon-arrow-right2:before {
   content: "\ea3c";
