--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -5,7 +5,6 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="../../assets/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="../../assets/css/fonts.css">
-	<link rel="stylesheet" type="text/css" href="../../assets/css/ionicons.min.css">
 	<link rel="stylesheet" href="../../assets/css/icomoon.css">
 
 	<!-- style for this template -->
@@ -15,12 +14,57 @@
 	<title>Search</title>
 </head>
 <body>
-<div class="menu"></div>
 <!-- Layout Principal -->
+<div class="menu"></div>
 <div class="layoutSearch">
 	<!-- Layout para Resultados -->
 	<div class="layoutItem">
-		<!-- Item -->
+		<div class="Item">
+			<div class="Item-picture">
+				<figure class="Item-picture-image"
+				style="background-image:url(../../assets/images/profile.png)"
+				></figure>
+			</div>
+			<div class="Item-share">
+				<a href="#">
+					<span class="icon-share-2"></span>
+				</a>
+			</div>
+			<div class="Item-info">
+				<a href="#linkpendejo" class="Item-info-link"></a>
+				<h2 class="Item-info-name">
+					Pollos Kikys
+				</h2>
+				<h5 class="Item-info-category">
+					Restaurant - Santa Cruz
+				</h5>
+				<p class="Item-info-description">
+					Pollos a la leña siempre con doble arroz,
+					Deliciosos y Sensuales llopos a la leña siempre con doble arroz!
+				</p>
+				<adress class="Item-info-address">
+					<strong>Direccion:</strong>
+					Calle Pinilla Nro.2588, Edif Arcadia P.11 E(Socopachi)
+				</adress>
+
+				<div class="Item-info-contact">
+					<a href="tel:79413052" class="Item-info-contact-cellphone">
+						<span class="icon-phone"></span>
+						<i>79413052</i>
+					</a>
+					<a href="#" class="Item-info-contact-gps">
+						<span class="icon-map-pin"></span>
+						<i>Ver Mapa</i>
+					</a>
+					<a href="#" class="Item-info-contact-more">
+						<span class="icon-arrow-right"></span>
+						<i>Ver Mas...</i>
+					</a>
+				</div>
+
+			</div>
+		</div>
+		<!--
 		<div class="Item">
 			<div class="Item-picture">
 				<figure class="Item-picture-image"
@@ -33,6 +77,7 @@
 				</a>
 			</div>
 			<div class="Item-info">
+				<a href="#linkpendejo" class="Item-info-link"></a>
 				<h2 class="Item-info-name">
 					Pollos Kikys
 				</h2>
@@ -77,6 +122,7 @@
 				</a>
 			</div>
 			<div class="Item-info">
+				<a href="#linkpendejo" class="Item-info-link"></a>
 				<h2 class="Item-info-name">
 					Pollos Kikys
 				</h2>
@@ -121,6 +167,7 @@
 				</a>
 			</div>
 			<div class="Item-info">
+				<a href="#linkpendejo" class="Item-info-link"></a>
 				<h2 class="Item-info-name">
 					Pollos Kikys
 				</h2>
@@ -165,6 +212,7 @@
 				</a>
 			</div>
 			<div class="Item-info">
+				<a href="#linkpendejo" class="Item-info-link"></a>
 				<h2 class="Item-info-name">
 					Pollos Kikys
 				</h2>
@@ -209,6 +257,7 @@
 				</a>
 			</div>
 			<div class="Item-info">
+				<a href="#linkpendejo" class="Item-info-link"></a>
 				<h2 class="Item-info-name">
 					Pollos Kikys
 				</h2>
@@ -253,6 +302,7 @@
 				</a>
 			</div>
 			<div class="Item-info">
+				<a href="#linkpendejo" class="Item-info-link"></a>
 				<h2 class="Item-info-name">
 					Pollos Kikys
 				</h2>
@@ -297,6 +347,7 @@
 				</a>
 			</div>
 			<div class="Item-info">
+				<a href="#linkpendejo" class="Item-info-link"></a>
 				<h2 class="Item-info-name">
 					Pollos Kikys
 				</h2>
@@ -341,6 +392,7 @@
 				</a>
 			</div>
 			<div class="Item-info">
+				<a href="#linkpendejo" class="Item-info-link"></a>
 				<h2 class="Item-info-name">
 					Pollos Kikys
 				</h2>
@@ -385,6 +437,7 @@
 				</a>
 			</div>
 			<div class="Item-info">
+				<a href="#linkpendejo" class="Item-info-link"></a>
 				<h2 class="Item-info-name">
 					Pollos Kikys
 				</h2>
@@ -429,6 +482,7 @@
 				</a>
 			</div>
 			<div class="Item-info">
+				<a href="#linkpendejo" class="Item-info-link"></a>
 				<h2 class="Item-info-name">
 					Pollos Kikys
 				</h2>
@@ -473,6 +527,7 @@
 				</a>
 			</div>
 			<div class="Item-info">
+				<a href="#linkpendejo" class="Item-info-link"></a>
 				<h2 class="Item-info-name">
 					Pollos Kikys
 				</h2>
@@ -505,50 +560,7 @@
 
 			</div>
 		</div>
-		<div class="Item">
-			<div class="Item-picture">
-				<figure class="Item-picture-image"
-				style="background-image:url(../../assets/images/profile.png)"
-				></figure>
-			</div>
-			<div class="Item-share">
-				<a href="#">
-					<span class="icon-share2"></span>
-				</a>
-			</div>
-			<div class="Item-info">
-				<h2 class="Item-info-name">
-					Pollos Kikys
-				</h2>
-				<h5 class="Item-info-category">
-					Restaurant - Santa Cruz
-				</h5>
-				<p class="Item-info-description">
-					Pollos a la leña siempre con doble arroz,
-					Deliciosos y Sensuales llopos a la leña siempre con doble arroz!
-				</p>
-				<adress class="Item-info-address">
-					<strong>Direccion:</strong>
-					Calle Pinilla Nro.2588, Edif Arcadia P.11 E(Socopachi)
-				</adress>
-
-				<div class="Item-info-contact">
-					<a href="tel:79413052" class="Item-info-contact-cellphone">
-						<span class="icon-phone"></span>
-						<i>79413052</i>
-					</a>
-					<a href="#" class="Item-info-contact-gps">
-						<span class="icon-location2"></span>
-						<i>Ver Mapa</i>
-					</a>
-					<a href="#" class="Item-info-contact-more">
-						<span class="icon-arrow-right2"></span>
-						<i>Ver Mas...</i>
-					</a>
-				</div>
-
-			</div>
-		</div>
+	-->
 	</div>
 	<!-- Layout de filtros -->
 	<div class="layoutFilter">
@@ -559,9 +571,29 @@
 					Filtros
 				</h3>
 			</div>
-			<div class="Filter-category">
-				<img class="Filter-category-image" src="../../assets/images/gooCategorias.jpg" alt="">
-				<h5>Cambiar Categoria</h5>
+			<div class="Filter-presenter">
+				<img src="../../assets/images/explorar.png" alt="">
+				<h5>Resultados filtrados por</h5>
+			</div>
+
+			<div class="Filter-sub">
+				<h3 class="Filter-sub-title">Categoria:</h3>
+				<div class="Filter-sub-name">
+					Policias y Seguridad Ciudadana
+				</div>
+			</div>
+
+			<div class="Filter-sub">
+				<h3 class="Filter-sub-title">Departamento:</h3>
+				<div class="Filter-sub-name">
+					Chuquisaca
+				</div>
+			</div>
+
+			<div class="Filter-copy">
+				<span>
+					©Openred - gooMovil - 2018
+				</span>
 			</div>
 
 		</div>
