--- a/templates/search/search.css
+++ b/templates/search/search.css
@@ -14,9 +14,9 @@ body{
   display: block;
   width: 960px;
   margin: 0 auto;
-  background: red;
   white-space: nowrap;
   word-spacing: -4px;
+  /*background: red;*/
 
 }
 .layoutItem,
@@ -31,14 +31,31 @@ body{
 .layoutItem{
   display: inline-block;
   width: 600px;
-  background: yellow;
+  /*background: yellow;*/
 }
 .layoutFilter{
   display: inline-block;
   position: relative;
   width: 360px;
   height: 50px;
-  background: green;
+  /*background: green;*/
+}
+@media (max-width:420px){
+  .layoutSearch{
+    width: 100%;
+  }
+  .layoutItem{
+    display: block;
+    width: 100%;
+  }
+  .layoutFilter{
+    display: block;
+  }
+  .Filter{
+    display: block;
+    position: absolute!important;
+    top: 0!important;
+  }
 }
 /********************************************************
                     FILTER COMPONENT
@@ -46,7 +63,7 @@ body{
 
 .Filter{
   width: 300px;
-  height: 500px;
+  min-height: 430px;
   top: 50px;
   border-radius: 7px;
   overflow: hidden;
@@ -69,6 +86,37 @@ body{
   color: #e9eaeb;
   font-weight: 200;
   display: inline-block;
+}
+.Filter-presenter{
+  text-align: center;
+}
+.Filter-presenter img{
+  width: 100px;
+  height: 65px;
+  margin: 10px auto;
+}
+.Filter-presenter h5{
+  margin: 5px 0;
+  font-size: 18px;
+}
+.Filter-sub{
+  margin: 15px 30px;
+  cursor: pointer;
+}
+.Filter-sub-title{
+  padding: 0;
+  margin: 0;
+}
+.Filter-sub-name{
+  font-weight: 500;
+  color: #1d70b8;
+  background: #e9eaed;
+  padding: 15px;
+  border-radius: 7px;
+}
+.Filter-copy{
+  padding: 20px 0px;
+  text-align: center;
 }
 
 /********************************************************
@@ -114,7 +162,7 @@ body{
   background-size: cover;
 }
 .Item-picture-genial{
-  
+
 }
 .Item-share a{
   text-decoration: none;
@@ -134,6 +182,14 @@ body{
   width: 310px;
   max-height: 130px;
 }
+.Item-info-link{
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 0;
+}
 .Item-info-name{
   white-space: nowrap;
   overflow: hidden;
@@ -145,7 +201,6 @@ body{
   color: #71777c;
 }
 .Item-info-description{
-  position: relative;
   color: #47494a;
   height: 18px;
   width: 100%;
@@ -163,12 +218,17 @@ body{
   font-size: 12px;
 }
 .Item-info-contact{
-    margin: 4px 0px;
+  position: relative;
+  display: block;
+  margin: 4px 0px;
+  padding: 6px 0px;
+  z-index: 2;
 }
 .Item-info-contact a{
   text-decoration: none;
   color: #000;
   font-size: 12px;
+  padding: 10px 0px;
 }
 .Item-info-contact span{
   font-size: 16px;
@@ -222,6 +282,7 @@ body{
     width: 100%;
     overflow: auto;
     padding: 10px;
+    min-height: 175px;
   }
   .Item-picture{
     display: block;
